crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@duplicate_functions_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/duplicate_functions_fail.tapir
---
Error: Function with name 'my_function' already exists
   ╭─[ duplicate_functions_fail.tapir:5:4 ]
   │
 1 │ fn my_function(x: int) -> int {
   │    ─────┬─────  
   │         ╰─────── Originally declared here
   │ 
 5 │ fn my_function(x: int) -> fix {
   │    ─────┬─────  
   │         ╰─────── Also declared here
───╯
Error: Function my_function should return results, but not all branches return.
   ╭─[ duplicate_functions_fail.tapir:1:4 ]
   │
 1 │ fn my_function(x: int) -> int {
   │                           ─┬─  
   │                            ╰─── Function returns results
───╯
Error: Function my_function should return results, but not all branches return.
   ╭─[ duplicate_functions_fail.tapir:5:4 ]
   │
 5 │ fn my_function(x: int) -> fix {
   │                           ─┬─  
   │                            ╰─── Function returns results
───╯
